--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,12 @@ server {
     server_name app.emessmodasa.site;
 
     root /usr/share/nginx/html;
-    index index.html;
+     index index.html index.htm;
 
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
+
     }
 
-    # Optional: serve static assets with cache
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public";
-    }
+ 
 }
