--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.14",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
     "qrcode": "^1.5.4",
